# Foley

./: .env.example  .gitignore  README.md  index.html  logos.html  package.json  pnpm-lock.yaml  render.yaml
apps/cutroom/: next.config.js  package.json  playwright.config.ts
apps/foley-mcp/: README.md  package.json  tsconfig.json
docs/: CNAME  index.html
extensions/recorder/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
pitch/: build.py  foley.pptx
scripts/: bootstrap.sh
scripts/test/: 00-typecheck.sh  10-routes.sh  20-apis.sh  30-onboard.sh  40-ai.sh  50-checker.sh  60-fs.sh  70-keys-mcp.sh  80-ui.sh  _lib.sh  all.sh
services/director/: pyproject.toml
services/director/src/director/: __init__.py  agent.py  ask.py  atomic_io.py  bake_master.py  captions.py  checker.py  cli.py  concat.py  config.py  continuous_narration.py  github.py  logfire_setup.py  models.py  narrator.py  playwright_runner.py  proposer.py  walkthrough_loader.py  waveform.py
services/director/tests/fixtures/board_counts_pr/: pr.diff  pr.json
services/director/tests/fixtures/button_label_pr/: pr.diff  pr.json
services/director/tests/fixtures/new_screen_pr/: pr.diff  pr.json
skills/: README.md
skills/foley/: SKILL.md
walkthroughs/foley/: brand.yaml  captions.vtt  narration.timing.json  (+3 more)
wiki/: AI-features.md  API-reference.md  Architecture.md  Competitor-parity.md  Director-CLI-reference.md  Home.md  Operations-and-runbook.md  Quickstart-for-developers.md  Quickstart-for-judges.md  Testing.md  brand.yaml-schema.md  walkthrough.yaml-schema.md
(+204 files in other folders)
