[project]
name = "director"
version = "0.0.1"
description = "Foley's PR-diff-reasoning agent and render orchestrator."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "anthropic>=0.40",
  "elevenlabs>=1.10",
  "playwright>=1.48",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.9",
  "logfire>=2.0",
  "python-dotenv>=1.0",
]

[project.scripts]
director = "director.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/director"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
